--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,9 +2,9 @@ version: 2
 build:
     os: ubuntu-20.04
     tools:
-        python: "3.10"
+        python: "3.9"
 sphinx:
-    configuration: docs/conf.py
+    configuration: docs/source/conf.py
     fail_on_warning: true
 python:
     install:
